# tablelinker-lib

./: .gitignore  README.md  pipe.py  pyproject.toml  sample.py
docs/: api.rst  as_command.rst  as_library.rst  aslibrary.rst  conf.py  convertor.rst  index.rst  install.rst  quick_start.rst
sample/: calc.json  census2020.json  concat.json  concat_col.json  delete_col.json  delete_cols.json  delete_row.json  insert_col.json  insert_cols.json  move_col.json  rename_col.json  reorder_cols.json  sakurai_sightseeing_spots_sjis.csv  select_row.json  select_string_contains.json  split_col.json  split_row.json  task.json
sample/datafiles/: katsushika_tourism.csv
sample/taskfiles/: census2020.json  task.json  task2.json  task3.json
tablelinker/: __init__.py  __main__.py  table.py  tablelinker.py  task.py
tablelinker/convertors/basics/: __init__.py  calc_col.py  concat_col.py  concat_title.py  delete_col.py  delete_row.py  generate_pk.py  geocoder.py  insert_col.py  mapping_col.py  move_col.py  mtab.py  rename_col.py  reorder_col.py  round.py  select_row.py  split_col.py  truncate.py  update_col.py  update_row.py  wareki.py  zenkaku.py
tablelinker/convertors/basics/tests/: test_concat_col.py  test_delete_row.py  test_select_row.py  test_split_col.py  test_truncate.py  test_wareki.py  test_zenkaku.py
tablelinker/convertors/core/: __init__.py  attr_type.py  context.py  convertors.py  core.py  csv_cleaner.py  filters.py  input.py  mapping.py  output.py  params.py
tablelinker/convertors/extras/: __init__.py  date_extract.py  geocoder.py  mapping_col.py  mtab.py  wareki.py
tablelinker/core/: context.py  convertors.py  csv_cleaner.py  date_extractor.py  input.py  params.py  table.py  task.py
tablelinker/mtab/: mtab.py
templates/: sightseeing_spots.csv
tests/: conftest.py  test_basic_convertors.py  test_extra_convertors.py  test_file_ios.py
