[tool.poetry]
name = "tablelinker-lib"
version = "0.1.0"
description = "A library of processes for manipulating tabular data in CSV format"
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
readme = "README.md"
repository = "https://github.com/InfoProto/tablelinker-lib"
keywords = ["CSV", "tabular", "manipulation", "cleansing"]
packages = [{include = "tablelinker"}]
classifiers = [
	"Operating System :: Linux",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
jeraconv = "^0.2.1"
jageocoder = "^1.3.1"
requests = "^2.28.1"
pandas = "^1.5.2"
nkf = "^0.2.0"
munkres = "^1.1.4"
transformers = "^4.25.1"
fugashi = "^1.2.1"
torch = "^1.13.1"
install = "^1.3.5"
ipadic = "^1.0.0"
docopt = "^0.6.2"
jaconv = "^0.3.3"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
Sphinx = "<6"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
